Lesson 18,19: page Dialogs, route, browser-router, routing

--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,10 +1,3 @@
-.content {
-    grid-area: c;
-    background-color: pink;
-}
-.content img {
+img {
     width: 800px;
-}
-.item {
-    color: deeppink;
 }
